SphereSim 2.4.0:
* Added methods to control and calculate Lennard-Jones potentials and forces.
* Added methods to control the simulated box size.
* Added rendering of a cuboid to Viewer to show the box size.
* Added a simulated system to Grapher using Lennard-Jones potential.
* Improved mingw-w64 cross-compilation compatibility.
* Improved simulated system in Viewer.
* Improved position integrating by adding a new position array to SphereCalculator.

SphereSim 2.3.2:
* Added Grapher client to make statistical plots about sphere speeds.
* Reduced included header files and removed debug outputs.

SphereSim 2.3.1:
* Improved Viewer sphere system.
* Added gravity calculation to simulation and to potential energy summation.
* Improved collision detection.
* Added fullness checks and exceptions to TwoDimArray class.
* Added sphere system to Viewer.
* Added methods to get kinetic energy of simulated system.

SphereSim 2.3.0:
* Added forces to collision detection.
* Added duplicate collision detection avoidance by counting colliding spheres per sphere.
* Added collisions to potential energy summation.

SphereSim 2.2.4:
* Added a TwoDimArray class to greatly improve collision detection speed.
* Added a flag and methods to disable collision detection.

SphereSim 2.2.3:
* Improved Calculator performance.
* Added basic sphere collision detection, very slow.

SphereSim 2.2.2:
* Added changelog.
* Made FrameBuffer increase read index when full.
* Added methods to let Server sort spheres in cells.